<resources>
    <string name="app_name">PDM_2021_I_P1_Project1</string>
    <string name="you_died">YOU DIED 💔</string>
    <string name="hangman">HANGMAN</string>
    <string name="play">PLAY</string>
    <string name="create_word">CREATE WORD</string>
    <string name="exit">Exit</string>
    <string name="retry">RETRY ⚔</string>
    <string name="back_to_menu">BACK TO MENU 🚪</string>
    <string name="you_ve_won">🎉 YOU WON  🎉</string>
    <string name="play_again">PLAY AGAIN ?</string>
    <string name="todo">TODO</string>
    <string name="write_a_word">WRITE A WORD</string>
    <string name="add_a_hint">ADD A HINT</string>
    <string name="type_a_word">TYPE A WORD</string>
    <string name="let_s_play">LET´S PLAY</string>
    <string name="type_in_a_letter">TYPE IN A LETTER</string>
    <string name="hint">Hint</string>
    <string name="setwordplay">%s</string>
    <string name="setclue">%s</string>
</resources>