<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txvTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="51dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/codeprobold"
        android:letterSpacing="0.5"
        android:text="@string/hangman"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="253dp"
        android:layout_height="70dp"
        android:layout_marginBottom="24dp"
        android:text="@string/play"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCreateWord"
        android:layout_width="253dp"
        android:layout_height="70dp"
        android:layout_marginBottom="24dp"
        android:text="@string/create_word"
        app:layout_constraintBottom_toTopOf="@+id/btnExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="253dp"
        android:layout_height="70dp"
        android:layout_marginBottom="204dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>