<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".DefeatActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="213dp"
        android:layout_height="232dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/frame5"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="99dp" />

    <TextView
        android:id="@+id/txvYouveLost"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/codeprobold"
        android:text="@string/you_died"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView"
        tools:layout_editor_absoluteX="65dp" />

    <Button
        android:id="@+id/btnBackToMenuFromDefeat"
        android:layout_width="218dp"
        android:layout_height="63dp"
        android:text="@string/back_to_menu"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="549dp" />

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="218dp"
        android:layout_height="63dp"
        android:text="@string/retry"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="469dp" />
</androidx.constraintlayout.widget.ConstraintLayout>