<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"

    tools:context=".CreateWordActivity">

    <TextView
        android:id="@+id/txvWriteAWord"
        android:layout_width="356dp"
        android:layout_height="54dp"
        android:layout_marginStart="49dp"

        android:layout_marginEnd="49dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/codeprobold"
        android:text="@string/write_a_word"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTypeAWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writegif" />

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="74dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHint"
        app:srcCompat="@drawable/ic_save" />

    <EditText
        android:id="@+id/editTextHint"
        android:layout_width="328dp"
        android:layout_height="49dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:fontFamily="@font/codeprobold"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/hints"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="343dp"
        android:layout_height="26dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="31dp"
        android:fontFamily="@font/codeprobold"
        android:text="@string/add_a_hint"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTypeAWord" />

    <EditText
        android:id="@+id/editTextTypeAWord"
        android:layout_width="337dp"
        android:layout_height="84dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:fontFamily="@font/codeprobold"
        android:hint="@string/type_a_word"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/hints"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvWriteAWord" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/writegif"
        android:layout_width="216dp"
        android:layout_height="138dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="45dp"
        android:src="@drawable/write"
        app:layout_constraintBottom_toTopOf="@+id/txvWriteAWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/write" />

</androidx.constraintlayout.widget.ConstraintLayout>